--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -779,7 +779,7 @@ msgstr ""
 "  \\item Pokud Nepřátelský Útočící Hrdina vstoupí na Dílek Mapy nebo Pole, na kterém je váš Hlavní Hrdina (výjimkou je, pokud jste ve\n"
 "    svém městě Kleesiv), nebo pokud útočí na Kleesiv a vy nejste přítomni ve svém městě\n"
 "    Kleesiv, budete okamžitě přeneseni zpět do Kleesivu, ztratíte zbývající Pohybové Body,\n"
-"    ztratíte 3 \\svg{gold}, získáte \\svg{morale_negative} a náhodně odhodíte 1 kartu z ruky.\n"
+"    ztratíte 3 \\svg{gold}, získáte \\svg{morale_negative} a náhodně odhodíte 1 Kartu z ruky.\n"
 "  \\item Nepřátelští Útočící Hrdinové se pohybují pouze o 2 BP. Konečná Útočící Armáda se pohybuje o 4 BP. Vydávají se po nejkratší\n"
 "    cestě do Kleesivu. Pokud vlastníte Důl na Dílku Mapy, do kterého vstoupí, obsadí Důl (ale nebudou\n"
 "    se vracet), a pak pokračují po nejkratší cestě do Kleesivu. Všechno ostatní ignorují.\n"
