--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -238,16 +238,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:49
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{For a 2-player Scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Starting (I) Map Tile\n"
-#| "  \\item 2 × Far (II--III) Map Tile\n"
-#| "  \\item 2 × Near (IV--V) Map Tile\n"
-#| "  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{For a 2-player Scenario:}\n"
 "\\begin{itemize}\n"
@@ -263,22 +254,13 @@ msgstr ""
 "  \\item 2 × Startovní (I) Dílek Mapy\n"
 "  \\item 2 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 2 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:57
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{For a 3-player Scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 3 × Starting (I) Map Tile\n"
-#| "  \\item 3 × Far (II--III) Map Tile\n"
-#| "  \\item 3 × Near (IV--V) Map Tile\n"
-#| "  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{For a 3-player Scenario:}\n"
 "\\begin{itemize}\n"
@@ -294,7 +276,7 @@ msgstr ""
 "  \\item 3 × Startovní (I) Dílek Mapy\n"
 "  \\item 3 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 3 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -324,13 +306,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:70
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -356,13 +332,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:79
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.\n"
-#| "    You can choose randomly by picking one of the four shuffled Statistic cards: \\textit{Attack} -- Azure, \\textit{Defense} -- Crystal, \\textit{Knowledge} -- Rust, \\textit{Power} -- Faerie.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.\n"
@@ -371,27 +341,14 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Vyberte jednoho z Draků ze seznamu bossů: Azurový drak, Krystalový drak, Rezavý drak nebo Pohádkový drak.\n"
-"    Můžete si vybrat náhodně tím, že si vyberete jednu ze čtyř promíchaných karet Statistik: \\textit{Útok} -- Azurový, \\textit{Obrana} -- Krystalový, \\textit{Znalosti} -- Rezavý, \\textit{Síla} -- Pohádkový.\n"
+"  \\item Vyberte jednoho z Draků ze seznamu bossů: Azurový Drak, Krystalový Drak, Rezavý Drak nebo Pohádkový Drak.\n"
+"    Můžete si vybrat náhodně tím, že si vyberete jednu ze čtyř promíchaných Karet Statistik: \\textit{Útok} -- Azurový, \\textit{Obrana} -- Krystalový, \\textit{Znalosti} -- Rezavý, \\textit{Síla} -- Pohádkový.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:93
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Only a Main Hero can kill the Dragon.\n"
-#| "  \\item The final battle with the Dragon occurs at the center Field of the Center Map Tile.\n"
-#| "    Please refer to the encounter rules specified in the rules of the selected Dragon Boss.\n"
-#| "  \\item While fighting a Dragon Boss, ignore Gorgon's special ability.\n"
-#| "  \\item Heroes are unable to retreat from battles with the Dragon Boss.\n"
-#| "  \\item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \\svg{experience}.\n"
-#| "  \\item Players can Visit each Obelisk only once.\n"
-#| "    Afterwards, they must place their Faction cube on the Field.\n"
-#| "  \\item In the boss encounter, there is no battle Round limit.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Only a Main Hero can kill the Dragon.\n"
@@ -451,32 +408,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:147
-#, fuzzy
-#| msgid ""
-#| "{ \\textbf{\\MakeUppercase{Boss: Azure Dragon}} \\medskip \\textit{Little "
-#| "is known of the Azure Dragon.  It is both rare and mighty, thus few have "
-#| "seen it, and fewer still have survived its attacks.  This powerful "
-#| "creature is not much bigger than most dragons, but is said to be capable "
-#| "of enduring prolonged physical attack.  It is said those standing face-to-"
-#| "face with an Azure Dragon tend to freeze from pure fear.  } \\medskip "
-#| "\\textbf{Fighting the Azure Dragon:} \\begin{enumerate} \\item Place the "
-#| "Azure Dragon miniature/card on the battlefield.  Ignore its ability.  "
-#| "\\item Prepare a pile of discarded Artifacts and shuffle it.  "
-#| "\\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} \\item "
-#| "\\textit{Hoarding Tendency:} At the start of each Turn, randomly choose a "
-#| "card from the shuffled pile of discarded Artifacts.  If the Artifact is: "
-#| "\\begin{itemize} \\item A weapon: The Dragon gains one Breath attack that "
-#| "targets three creatures in a row.  The Unit directly hit in the middle "
-#| "suffers full damage, while the Units on both sides suffer 3\\,"
-#| "\\svg{damage-red} less.  \\item A piece of armor, shield, or clothing: "
-#| "The Dragon gains 3\\,\\svg{defense}, represented with spare Faction "
-#| "cubes.  Remove them after they have absorbed damage.  \\item A trinket: "
-#| "The Azure Dragon roars and summons an ice storm, causing all creatures to "
-#| "freeze in fear.  This results in every Unit moving only 1 Field per "
-#| "Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
-#| "\\end{itemize} \\item The Azure Dragon is immune to all Spells cast "
-#| "against it.  \\item Buffs and enhancements cast on player's Units remain "
-#| "effective.  \\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Azure Dragon}} \\medskip \\textit{Little is "
 "known of the Azure Dragon.  It is both rare and mighty, thus few have seen "
@@ -508,11 +439,11 @@ msgstr ""
 "o moc větší než většina draků, ale říká se, že je schopné vydržet dlouhodobý "
 "fyzický útok. Říká se, že ti, kdo stojí tváří v tvář Azurovému Drakovi, mají "
 "tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Boj s Azurovým "
-"Drakem:} \\begin{enumerate} \\item Umístěte miniaturu/kartu Azurového Draka "
+"Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Azurového Draka "
 "na Bojiště. Ignorujte jeho schopnost. \\item Připravte hromádku odhozených "
 "Artefaktů a zamíchejte ji. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item \\textit{Shromažďovací Tendence:} Na začátku každého "
-"tahu náhodně vyberte kartu z promíchané hromádky odhozených artefaktů. Pokud "
+"tahu náhodně vyberte Kartu z promíchané hromádky odhozených artefaktů. Pokud "
 "je artefakt: \\begin{itemize} \\item Zbraň: Drak získá jeden Dechový útok, "
 "který zasáhne tři Jednotky v řadě. Jednotka přímo zasažená uprostřed utrpí "
 "plné poškození, zatímco Jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
@@ -571,32 +502,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:212
-#, fuzzy
-#| msgid ""
-#| "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
-#| "entirely from red crystal and brought to life through magical means, the "
-#| "Crystal Dragon is literally semitransparent, lit from the center by its "
-#| "magical heart.  Used frequently as a training tool for young dragon "
-#| "slayers, many wizards also create these creatures for the crystal they "
-#| "shed.  } \\medskip \\textbf{Fighting the Crystal Dragon:} "
-#| "\\begin{enumerate} \\item Place the Crystal Dragon miniature/card on the "
-#| "battlefield.  Ignore its ability.  \\item Place two Gold Golems and two "
-#| "Diamond Golems on the battlefield.  \\end{enumerate} \\medskip "
-#| "\\textbf{Rules:} \\begin{itemize} \\item At the start of every battle "
-#| "Round, check if any of the Golems were removed in the previous Round.  If "
-#| "so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row "
-#| "of the battlefield.  \\item \\textit{Golem Devour:} The Crystal Dragon "
-#| "can consume Golems to regain health.  During its Turn, if the Crystal "
-#| "Dragon is adjacent to a Golem, it can choose to consume it, removing a "
-#| "certain amount of \\svg{damage-red} based on the type of Golem consumed: "
-#| "\\begin{itemize} \\item Consuming a Gold Golem: Remove 2 \\svg{damage-"
-#| "red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-red}.  "
-#| "\\item[] \\textbf{Note:} The Crystal Dragon can only consume one Golem "
-#| "per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond Golems "
-#| "do not possess any additional abilities beyond those specified on their "
-#| "cards.  They primarily serve as fodder for the Crystal Dragon's health "
-#| "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
-#| "battle Round.  \\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
 "entirely from red crystal and brought to life through magical means, the "
@@ -628,7 +533,7 @@ msgstr ""
 "magickým srdcem. Často se používá jako výcvikový nástroj pro mladé zabijáky "
 "draků a mnoho kouzelníků také vytváří tato stvoření kvůli krystalu, který "
 "vylučují. } \\medskip \\\\ \\textbf{Boj s Krystalovým Drakem:} "
-"\\begin{enumerate} \\item Umístěte miniaturu/kartu Krystalového Draka na "
+"\\begin{enumerate} \\item Umístěte Miniaturu/Kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda byli "
@@ -694,31 +599,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:276
-#, fuzzy
-#| msgid ""
-#| "{ \\textbf{\\MakeUppercase{Boss: Rust Dragon {\\scriptsize Requires "
-#| "Fortress Expansion}}} \\medskip \\textit{Rust Dragons are known to hunt "
-#| "Gorgons, and live and feed in sulfur mines.  With this appetite, Rust "
-#| "Dragons spew a concentrated acid as their primary attack.  This acid is "
-#| "capable of eating through the strongest armor, lowering the defense of "
-#| "its target while inflicting further damage.  } \\medskip "
-#| "\\textbf{Fighting the Rust Dragon:} \\begin{enumerate} \\item Place the "
-#| "Rust Dragon miniature/card on the battlefield.  Ignore its ability.  "
-#| "\\item Prepare four spare M\\&M Deck cards to mark pools of acid.  "
-#| "\\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} \\item The "
-#| "Rust Dragon is immune to basic Spells.  \\item \\textit{Corrosive Vomit:} "
-#| "The Rust Dragon has a powerful crowd control ability that allows it to "
-#| "spew four pools of sulfuric acid onto the battlefield \\textit{at the "
-#| "beginning} of each Combat Round.  Use M\\&M Deck cards placed face down "
-#| "to mark their locations.  \\item The Rust Dragon cannot place pools on "
-#| "the same Fields as in the previous Round.  Mark the Fields with spare "
-#| "Faction cubes to indicate where the pools were located.  \\item The pools "
-#| "of sulfuric acid block battlefield Fields and impede movement for one "
-#| "Round only.  They serve as Obstacles for both players and the Dragon.  "
-#| "\\item The Rust Dragon's passive ability, \\textit{Corrosion}, decreases "
-#| "an enemy Unit's armor by 2 with each attack.  Place a spare Faction cube "
-#| "on the Unit's card to indicate this effect.  Corrosion stacks up to -4 "
-#| "\\svg{defense}.  \\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Rust Dragon {\\scriptsize Requires Fortress "
 "Expansion}}} \\medskip \\textit{Rust Dragons are known to hunt Gorgons, and "
@@ -749,20 +629,20 @@ msgstr ""
 "Draci jako svůj hlavní útok vypouštějí koncentrovanou kyselinu. Tato "
 "kyselina je schopna prokousat se nejsilnějším brněním, snížit obranu svého "
 "cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Boj s "
-"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte miniaturu/kartu Rezavého "
+"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Rezavého "
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
-"karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
+"Karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
 "základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
-"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte karty "
+"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte Karty "
 "Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item Rezavý "
 "Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. Označte "
 "Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno Kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
-"nepřátelské Jednotky o 2 při každém útoku. Na kartu Jednotky umístěte "
+"nepřátelské Jednotky o 2 při každém útoku. Na Kartu Jednotky umístěte "
 "náhradní Kostičku Frakce, abyste označili tento efekt. Koroze se kumuluje až "
 "do -4 \\svg{defense}. \\end{itemize} }"
 
@@ -809,37 +689,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:348
-#, fuzzy
-#| msgid ""
-#| "{ \\textbf{\\MakeUppercase{Boss: Faerie Dragon {\\scriptsize Requires "
-#| "Rampart Expansion}}} \\medskip \\textit{Faerie Dragons are deceptively "
-#| "cute, but in truth, are mischievous tricksters.  Little is known about "
-#| "these notorious troublemakers.  What is known is found more in storybooks "
-#| "than magical tomes.  Some say they are invisible.  Some say they can cast "
-#| "spells.  Some say Magic Mirror is one of their natural defensive "
-#| "traits.  } \\medskip \\textbf{Fighting the Faerie Dragon:} "
-#| "\\begin{enumerate} \\item Place 2 Faerie Dragon cards on the "
-#| "battlefield.  Ignore their abilities.  \\item Place 1 Dendroid card from "
-#| "the \\svg{silver} Neutral Units Deck onto the battlefield, and place 3 "
-#| "additional cards face down to represent the other 3 Dendroids.  "
-#| "\\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} \\item The "
-#| "Faerie Dragon is immune to basic Spells.  \\item The Faerie Dragon can "
-#| "cast up to two different Spells per battle Round.  \\item All Spells are "
-#| "displayed visibly next to the Combat Board: \\begin{enumerate} \\item The "
-#| "first Spell is \\textit{Lightning}.  \\item The second Spell is "
-#| "\\textit{Cure}.  \\item For the third Spell, the Faerie Dragon randomly "
-#| "picks an expert Spell from the Spell Deck, excluding Map \\svg{map} "
-#| "Spells.  If a Map \\svg{map} Spell is picked, draw another Spell.  "
-#| "\\end{enumerate} \\item \\textit{Trickster:} In the first Round of the "
-#| "battle, the first targeted Faerie Dragon is a mere mirage.  It inflicts "
-#| "damage, but disappears from the battlefield when hit by an enemy.  \\item "
-#| "Dendroids' Ability: Each Dendroid holds a key to the Faerie Dragon's "
-#| "power.  After the second Dendroid dies, start removing one Spell from the "
-#| "Faerie Dragon's spellbook, beginning with the third Spell.  Decrease the "
-#| "dragon's Spell Empowerment \\svg{empower} by one (starting from its "
-#| "maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.  When there "
-#| "are no Dendroids left, the dragon loses the ability to cast Spells.  "
-#| "\\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Faerie Dragon {\\scriptsize Requires "
 "Rampart Expansion}}} \\medskip \\textit{Faerie Dragons are deceptively cute, "
@@ -877,9 +726,9 @@ msgstr ""
 "neviditelní. Někteří říkají, že umí sesílat kouzla. Někteří říkají, že "
 "Zrcadlo kouzel je jednou z jejich přirozených obranných vlastností. } "
 "\\medskip \\\\ \\textbf{Boj s Pohádkovým Drakem:} \\begin{enumerate} \\item "
-"Umístěte 2 karty Pohádkového Draka na bojiště. Ignorujte jejich schopnosti. "
-"\\item Umístěte 1 kartu Dendroida z \\svg{silver} Balíčku neutrálních "
-"Jednotek na bojiště a umístěte 3 další karty lícem dolů, aby představovaly "
+"Umístěte 2 Karty Pohádkového Draka na bojiště. Ignorujte jejich schopnosti. "
+"\\item Umístěte 1 Kartu Dendroida z \\svg{silver} Balíčku neutrálních "
+"Jednotek na bojiště a umístěte 3 další Karty lícem dolů, aby představovaly "
 "další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním Kouzlům. "
 "\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Boje. \\item "
