--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -287,15 +287,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:71
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{6}, \\nth{9} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
-#| "  \\item All players possessing the title of ``\\textcolor{cobalt}{Grail Knight}'' gain \\svg{morale_positive}.\n"
-#| "  \\item All players who do not possess a title gain 2 \\svg{morale_negative}.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{6}, \\nth{9} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -351,47 +343,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:119
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
-#| "  \\begin{enumerate}[leftmargin=15pt]\n"
-#| "    \\item \\textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item \\textbf{[1st Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_negative}.\n"
-#| "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
-#| "      \\item \\textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 3 \\svg{gold} instead. Then, choose one enemy player to discard 2 random cards from their hand.\n"
-#| "      \\item \\textbf{[4th Obelisk]} Remove up to 4 cards from your hand, except Statistic cards; then, search each corresponding Deck for a card of your choice and put it in your hand.\n"
-#| "    \\end{enumerate}\n"
-#| "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit card from your Unit Deck in exchange for:\n"
-#| "    \\begin{enumerate}\n"
-#| "      \\item *\\svgunit{bronze}: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
-#| "      \\item *\\svgunit{silver}: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
-#| "      \\item *\\svgunit{golden}: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic card Deck. Finally, if the Unit card was on the Pack side, \\textbf{Search (2)} the \\svgunit{azure} Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
-#| "    \\end{enumerate}\n"
-#| "  \\end{enumerate}\n"
-#| "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
-#| "  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction cube on their Hero portrait to mark this effect. A \\textcolor{cobalt}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
-#| "  \\item When a player chooses \\textbf{Sacrifice} at an Obelisk, place a number of Faction cubes on the sacrificed Unit card and on the Obelisk Field equivalent to the number of times the player has chosen the \\textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction cubes on the Unit card and 2 Faction cubes on the Obelisk Field.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.\n"
-#| "  \\item If a Unit Recruited at an Obelisk is defeated, remove it.\n"
-#| "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.\n"
-#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral \\svgunit{azure} Units.\n"
-#| "  \\item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.\n"
-#| "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
-#| "  \\item Ignore Combat encounters on the Field with the Grail.\n"
-#| "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-#| "  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
-#| "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
-#| "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
-#| "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
-#| "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
-#| "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
-#| "  \\item The Grail Token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
-#| "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction cube on the Grail Token to mark this effect.\n"
-#| "  \\item Once cleansed, the Grail Token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \\svg{damage-red} from your Units.''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
@@ -440,36 +392,36 @@ msgstr ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative}.\n"
 "      \\item \\textbf{[2. Obelisk]} Zvyšte svůj příjem \\svg{gold}, \\svg{building_materials}, nebo \\svg{valuables} o 1 krok.\n"
-"      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto Pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné karty ze své ruky.\n"
-"      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím Balíčku kartu dle vašeho výběru a vložte ji do své ruky.\n"
+"      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto Pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
+"      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 Karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím Balíčku Kartu dle vašeho výběru a vložte ji do své ruky.\n"
 "    \\end{enumerate}\n"
-"    \\item \\textbf{[Oběť]} Odstraňte kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
+"    \\item \\textbf{[Oběť]} Odstraňte Kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
 "    \\begin{enumerate}\n"
-"      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
-"      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
-"      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (2)} v Balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
+"      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
+"      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
+"      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (2)} v Balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
 "  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
-"  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet Kostiček Frakce na obětovanou kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 Kostičky Frakce na kartu Jednotky a 2 Kostičky Frakce na Pole Obelisku.\n"
+"  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet Kostiček Frakce na obětovanou Kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 Kostičky Frakce na Kartu Jednotky a 2 Kostičky Frakce na Pole Obelisku.\n"
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Málo.\n"
 "  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
-"  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou kartu Dovednosti.\n"
-"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
-"  \\item Kdykoli je vytažena karta Prohlášení Astrologů nebo karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte kartu novou.\n"
+"  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít Kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne Kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou Kartu Dovednosti.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
+"  \\item Kdykoli je vytažena Karta Prohlášení Astrologů nebo Karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte Kartu novou.\n"
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
 "  \\item Ignorujte střety v Boji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
 "  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
-"  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
+"  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit Kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
 "  \\item Pokud jiný Hrdina porazí Hrdinu s Žetonem Grálu, také získá Žeton Grálu.\n"
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s Žetonem Grálu, Žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
 "  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde bylo Kouzlo vyvoláno nebo použita budova.\n"
-"  \\item Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
+"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
 "  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
-"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
+"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
 "\\end{itemize}\n"
 "\n"
 
