--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -344,13 +344,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:73
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -374,34 +368,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:101
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remember: the center of VI--VII Tile next to all I Tiles is the Titans' Stronghold.\n"
-#| "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
-#| "  \\item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item Another player (your choice) gains 5\\,\\svg{gold}\n"
-#| "      \\item Another player (your choice) gains 2\\,\\svg{building_materials}\n"
-#| "      \\item Another player (your choice) gains 1\\,\\svg{valuables}\n"
-#| "    \\end{itemize}\n"
-#| "  Then, flag the VII Field with a Faction cube.\n"
-#| "  (There is no bonus in solo play!)\n"
-#| "  \\item Ignore all yellow borders on Starting Tiles I.\n"
-#| "  \\item You can use your build Token to give your resources to another player.\n"
-#| "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
-#| "  \\item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.\n"
-#| "  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).\n"
-#| "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold Deck instead of from the Neutral Unit card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit cards in this Deck, draw as many Unit cards as are available and place them on the Combat Board.\n"
-#| "  \\item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
-#| "  \\item Additionally, no player can:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item Attack other Heroes.\n"
-#| "    \\item Capture a Mine or Settlement that is already controlled.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
@@ -446,8 +413,8 @@ msgstr ""
 "  \\item Svůj Žeton Stavby můžete použít k předání svých surovin jinému hráči.\n"
 "  \\item Dva hráči mohou použít své Žetony Stavby k výměně Artefaktů a/nebo Kouzel.\n"
 "  \\item Kdykoliv hráč navštíví Obelisk, hodí si jednou Kostkou Pokladu, jednou Kostkou Surovin a vyřeší jednu z nich.\n"
-"  \\item Když jsou všechny Dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) karet Neutrálních Jednotek z odpovídajících Balíčků, abyste vytvořili samostatný Balíček Neutrálních Jednotek pro Pevnost Titánů (Balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité Scénáře by jinak nebylo možné s kartami z určitých rozšíření implementovat).\n"
-"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 karet z Balíčku Pevnosti Titánů místo z Balíčků karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během Boje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí Boj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek karet Jednotek, vytáhněte tolik karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
+"  \\item Když jsou všechny Dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) Karet Neutrálních Jednotek z odpovídajících Balíčků, abyste vytvořili samostatný Balíček Neutrálních Jednotek pro Pevnost Titánů (Balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité Scénáře by jinak nebylo možné s Kartami z určitých rozšíření implementovat).\n"
+"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 Karet z Balíčku Pevnosti Titánů místo z Balíčků Karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během Boje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí Boj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek Karet Jednotek, vytáhněte tolik Karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
 "  \\item Boj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další Kolo Boje, stejně jako Boj proti Jednotkám nižší než Azurové úrovně.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
 "  \\begin{itemize}\n"
