--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -443,7 +443,7 @@ msgid ""
 "Charging Armies \\#1 and \\#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.\n"
 "\n"
 msgstr ""
-"Útočící Armády \\#1 a \\#2 používají stejný AI Balíček a Balíček Schopností. Po Boji oba Balíčky zamíchejte.\n"
+"Útočící Armády \\#1 a \\#2 používají stejný AI Balíček a Balíček Schopností. Po Souboji oba Balíčky zamíchejte.\n"
 "\n"
 
 #. type: multicols*
@@ -576,7 +576,7 @@ msgid ""
 "You lose one Combat encounter with your Main Hero. Surrender is not an option.\n"
 "\n"
 msgstr ""
-"Prohrajete jeden Boj s vaším Hlavním Hrdinou. Kapitulace není možná.\n"
+"Prohrajete jeden Souboj s vaším Hlavním Hrdinou. Kapitulace není možná.\n"
 "\n"
 
 #. type: multicols*
@@ -788,7 +788,7 @@ msgstr ""
 "    Nepřátelský Útočící Hrdina, který se může dostat nejblíže ke Kleesivu, se pohybuje jako první.\n"
 "  \\item Hrad a Bašta již mají všechny Doly pod kontrolou ve svém území (na rozdíl od Pekla). Umístěte nepřátelské\n"
 "    Kostičky na všechny jejich Doly.\n"
-"  \\item Vaše Zdi, Brány a Střílna v Kleesivu jsou po každém Boji zcela obnoveny.\n"
+"  \\item Vaše Zdi, Brány a Střílna v Kleesivu jsou po každém Souboji zcela obnoveny.\n"
 "  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Zdi a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
 "  \\item Nepřátelské \\svg{unit_ranged} Jednotky vždy zaútočí na Střílnu, jakmile nebudou k dispozici žádné jiné \\svg{unit_ranged} Jednotky.\n"
 "  \\item Nepřátelské Jednotky vždy zaútočí na vaše Jednotky, pokud je to možné. Pokud to není možné, zaútočí na Bránu,\n"
