--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -382,7 +382,7 @@ msgid ""
 "\\textbf{General Kendal's Skill:} Artillery Ability Card\\footnote{For General Kendal, the Artilery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}\n"
 "\n"
 msgstr ""
-"\\textbf{Schopnost Generála Kendala:} Karta Dovednosti Dělostřelectvo\\footnote{Pro Generála Kendala Karta Dovednosti Dělostřelectvo vždy používá Expertní efekt a Válečný Stroj Balista se aktivuje pokaždé, když je Karta Dovednosti Dělostřelectvo vylosována, stejně jako na začátku Kola Boje.}\n"
+"\\textbf{Schopnost Generála Kendala:} Karta Dovednosti Dělostřelectvo\\footnote{Pro Generála Kendala Karta Dovednosti Dělostřelectvo vždy používá Expertní efekt a Válečný Stroj Balista se aktivuje pokaždé, když je Karta Dovednosti Dělostřelectvo vylosována, stejně jako na začátku Kola Souboje.}\n"
 "\n"
 
 #. type: multicols*
@@ -422,7 +422,7 @@ msgid ""
 "\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell Card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
 "\n"
 msgstr ""
-"\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × Karta Kouzla Zpomalení\\footnote{Všichni Nepřátelští Útočící Hrdinové používají stejné Balíčky AI a Kouzel. Po každém Boji je resetujte.}.\n"
+"\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × Karta Kouzla Zpomalení\\footnote{Všichni Nepřátelští Útočící Hrdinové používají stejné Balíčky AI a Kouzel. Po každém Souboji je resetujte.}.\n"
 "\n"
 
 #. type: multicols*
@@ -584,7 +584,7 @@ msgid ""
 "You lose one Combat encounter with your Main Hero (Surrendering costs 10 \\svg{gold}, and does not count as a defeat).\n"
 "\n"
 msgstr ""
-"Prohrajete jeden Boj s vaším Hlavním Hrdinou (Kapitulace stojí 10 \\svg{gold} a nepočítá se jako porážka).\n"
+"Prohrajete jeden Souboj s vaším Hlavním Hrdinou (Kapitulace stojí 10 \\svg{gold} a nepočítá se jako porážka).\n"
 "\n"
 
 #. type: multicols*
@@ -816,7 +816,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "    \\item Hrdina Generál Kendal se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi, Bránou\n"
 "      a Střílnou na jejich straně Desky Bojiště.\n"
-"    \\item Úroveň obtížnosti každého Boje se do konce Scénáře zvýší o jednu Úroveň\n"
+"    \\item Úroveň obtížnosti každého Souboje se do konce Scénáře zvýší o jednu Úroveň\n"
 "      (viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech).\n"
 "    \\item Nepřátelští Útočící Hrdinové mají pouze 2 BP, místo 3. Ignorují vše ostatní\n"
 "      (včetně Dolů a Osad, pokud je to možné) a jdou přímo do hráčova Města Frakce (na Dílku Mapy S6).\n"
