--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -219,7 +219,7 @@ msgid ""
 "\\subsection*{Tier V--VII Combat on Hard$+$\\\\Difficulty}\n"
 "\n"
 msgstr ""
-"\\subsection*{Boj Úrovně V--VII na Těžkou$+$\\\\Obtížnost}\n"
+"\\subsection*{Souboj Úrovně V--VII na Těžkou$+$\\\\Obtížnost}\n"
 "\n"
 
 #. type: multicols*
@@ -230,8 +230,8 @@ msgid ""
 "For example, a Level VII Combat on Hard will be against 2 × \\svgunit{azure} Neutral Units.\n"
 "\n"
 msgstr ""
-"Boje úrovně V--VII budou mít o 1 nižší obtížnost při hře na Těžkou nebo Nemožnou obtížnost.\n"
-"Například Boj Úrovně VII na Těžkou obtížnost bude proti 2 × \\svgunit{azure} Neutrálním Jednotkám.\n"
+"Souboje úrovně V--VII budou mít o 1 nižší obtížnost při hře na Těžkou nebo Nemožnou obtížnost.\n"
+"Například Souboj Úrovně VII na Těžkou obtížnost bude proti 2 × \\svgunit{azure} Neutrálním Jednotkám.\n"
 "\n"
 
 #. type: multicols*
@@ -301,7 +301,7 @@ msgid ""
 "\\subsection*{Combat with Neutral Units}\n"
 "\n"
 msgstr ""
-"\\subsection*{Boj s Neutrálními Jednotkami}\n"
+"\\subsection*{Souboj s Neutrálními Jednotkami}\n"
 "\n"
 
 #. type: multicols
@@ -311,7 +311,7 @@ msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Pokud se během Boje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
+"Pokud se během Souboje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
 "\n"
 
 #. type: multicols
@@ -373,7 +373,7 @@ msgstr ""
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_bad.png}\n"
 "    \\caption[bad protected]{\\textit{Toto rozestavení není povoleno, protože hráč Nekropole umístil své Jednotky na levou polovinu Desky Bojiště.\n"
-"      Sedláci musí také začít Boj na levé straně.}}\n"
+"      Sedláci musí také začít Souboj na levé straně.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
