--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -411,7 +411,7 @@ msgstr ""
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
 "  \\item Kdykoli je vytažena Karta Prohlášení Astrologů nebo Karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte Kartu novou.\n"
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
-"  \\item Ignorujte střety v Boji na Poli s Grálem.\n"
+"  \\item Ignorujte střety v Souboji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
 "  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
 "  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit Kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
@@ -419,9 +419,9 @@ msgstr ""
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s Žetonem Grálu, Žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
 "  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde bylo Kouzlo vyvoláno nebo použita budova.\n"
-"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
+"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Souboje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
 "  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
-"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
+"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Souboje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
 "\\end{itemize}\n"
 "\n"
 
