--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -367,12 +367,12 @@ msgstr ""
 "  \\item Pouze Hlavní Hrdina může zabít Draka.\n"
 "  \\item Závěrečná bitva s Drakem se odehrává na středovém Poli Středového Dílku mapy.\n"
 "    Prosím, odkažte se na pravidla setkání uvedená u vybraného Dračího Bosse.\n"
-"  \\item Při Boji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
+"  \\item Při Souboji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
 "  \\item Hrdinové nemohou ustoupit z bitev s Dračím Bossem.\n"
 "  \\item Když každý hráč navštíví Obelisk, může si vybrat, zda hodí Kostkou Pokladu nebo získá 1 \\svg{experience}.\n"
 "  \\item Hráči mohou každý Obelisk navštívit pouze jednou.\n"
 "    Poté musí na Pole umístit svou Kostičku Frakce.\n"
-"  \\item V setkání s bossem není žádný limit Kol Boje.\n"
+"  \\item V setkání s bossem není žádný limit Kol Souboje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -438,7 +438,7 @@ msgstr ""
 "jen pár lidí a ještě méně jich přežilo jeho útoky. Toto mocné stvoření není "
 "o moc větší než většina draků, ale říká se, že je schopné vydržet dlouhodobý "
 "fyzický útok. Říká se, že ti, kdo stojí tváří v tvář Azurovému Drakovi, mají "
-"tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Boj s Azurovým "
+"tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Souboj s Azurovým "
 "Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Azurového Draka "
 "na Bojiště. Ignorujte jeho schopnost. \\item Připravte hromádku odhozených "
 "Artefaktů a zamíchejte ji. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
@@ -532,11 +532,11 @@ msgstr ""
 "magickými prostředky. Je doslova poloprůhledný, osvětlený ze středu svým "
 "magickým srdcem. Často se používá jako výcvikový nástroj pro mladé zabijáky "
 "draků a mnoho kouzelníků také vytváří tato stvoření kvůli krystalu, který "
-"vylučují. } \\medskip \\\\ \\textbf{Boj s Krystalovým Drakem:} "
+"vylučují. } \\medskip \\\\ \\textbf{Souboj s Krystalovým Drakem:} "
 "\\begin{enumerate} \\item Umístěte Miniaturu/Kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda byli "
+"\\begin{itemize} \\item Na začátku každého Kola Souboje zkontrolujte, zda byli "
 "v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte jednoho "
 "nového Diamantového nebo Zlatého Golema (vybraného náhodně) do poslední řady "
 "bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak může žrát Golemy, "
@@ -549,7 +549,7 @@ msgstr ""
 "Golemů: Zlatí a Diamantoví Golemové nemají žádné další schopnosti nad rámec "
 "těch, které jsou uvedeny na jejich kartách. Slouží především jako potrava "
 "pro regeneraci zdraví Krystalového Draka. \\item Krystalový Drak má "
-"\\textit{Odvetný útok dvakrát} za Kolo Boje. \\end{itemize} }"
+"\\textit{Odvetný útok dvakrát} za Kolo Souboje. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:235
@@ -628,14 +628,14 @@ msgstr ""
 "loví Gorgony a žijí a krmí se v sirných dolech. S tímto apetitem Rezaví "
 "Draci jako svůj hlavní útok vypouštějí koncentrovanou kyselinu. Tato "
 "kyselina je schopna prokousat se nejsilnějším brněním, snížit obranu svého "
-"cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Boj s "
+"cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Souboj s "
 "Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Rezavého "
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
 "Karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
 "základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
-"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte Karty "
+"kyseliny na bojiště \\textit{na začátku} každého Kola Souboje. Použijte Karty "
 "Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item Rezavý "
 "Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. Označte "
 "Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
@@ -725,13 +725,13 @@ msgstr ""
 "v pohádkových knížkách než v magických spisech. Někteří říkají, že jsou "
 "neviditelní. Někteří říkají, že umí sesílat kouzla. Někteří říkají, že "
 "Zrcadlo kouzel je jednou z jejich přirozených obranných vlastností. } "
-"\\medskip \\\\ \\textbf{Boj s Pohádkovým Drakem:} \\begin{enumerate} \\item "
+"\\medskip \\\\ \\textbf{Souboj s Pohádkovým Drakem:} \\begin{enumerate} \\item "
 "Umístěte 2 Karty Pohádkového Draka na bojiště. Ignorujte jejich schopnosti. "
 "\\item Umístěte 1 Kartu Dendroida z \\svg{silver} Balíčku neutrálních "
 "Jednotek na bojiště a umístěte 3 další Karty lícem dolů, aby představovaly "
 "další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním Kouzlům. "
-"\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Boje. \\item "
+"\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Souboje. \\item "
 "Všechna Kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
 "\\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item Druhé "
 "Kouzlo je \\textit{Léčení}. \\item Pro třetí Kouzlo Pohádkový Drak náhodně "
